# aula_workshop

./: README.md  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py
path/: README.md  pyproject.toml
site/: index.html
