[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
blue = "^0.9.1"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "isort . && blue ."

